[package]
name = "_cardanoj_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
#cardano-serialization-lib = { path="../cardano-serialization-lib/rust" }
cardano-serialization-lib = "11.5.0"
#ffi-support = "0.4.2"
ffi-support = "0.4.4"
#rand = "0.7.3"
rand = "0.8.5"
#tiny-bip39 = "0.8.0"
tiny-bip39 = "1.0.0"
#serde = { version = "1.0.64", features = ["derive"] }
serde = "1.0.199"
#serde_json = "1.0.57"
serde_json = "1.0.116"
cbor_event = "2.4.0"
hex = "0.4.3"
